# cms_backend

./: .dockerignore  CPMS-App-Development-Document AN V1.1 0615026.docx  Dockerfile  docker-compose.yml  pyproject.toml  sample
apps/accounting/: apps.py
apps/accounting/migrations/: 0001_initial.py  0002_initial.py  0003_rename_party_account_glaccount_vendor_account.py
apps/accounting/models/: __init__.py  gl_account.py  salary.py  trial_balance.py
apps/api_logs/: apps.py
apps/authentication/: urls.py  utils.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: __init__.py  perms.py  user_profile.py  users.py
apps/authentication/permissions/: permissions.py  perms.py
apps/authentication/serializers/: __init__.py  contact_us.py  forget_password_otp.py  login.py  permissions.py  signup.py  users.py
apps/authentication/views/: __init__.py  auth.py  contact.py  forget_password.py  permissions.py  users.py
apps/manpower/: apps.py  urls.py
apps/manpower/migrations/: 0001_initial.py  0002_attendancelog_group_of_worker_and_more.py
apps/manpower/models/: __init__.py  assignment.py  attendance.py  overtime.py  worker.py
apps/manpower/serializers/: __init__.py  attendance.py  manpower.py  overtime.py  worker.py
apps/manpower/views/: __init__.py  attendance.py  manpower.py  overtime.py  worker.py
apps/materials/: urls.py
apps/projects/: admin.py  urls.py
base/validators/: __init__.py  photos.py
base/views/: generic_views.py
cms_backend/: asgi.py  rest.py  settings.py  settings_config.py  spectacular.py  urls.py  wsgi.py
(+62 files in other folders)
