[project]
name = "construction-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-mptt>=0.18.0",
    "django-user-agents>=0.4.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-forms>=1.1.8",
    "drf-spectacular>=0.29.0",
    "filetype>=1.2.0",
    "nepali-datetime>=1.0.8.5",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "ruff>=0.15.17",
    "uvicorn>=0.49.0",
]



[tool.ruff]

line-length = 88
target-version = "py311"


[tool.ruff.lint]

# Enable pyflakes (F), pycodestyle (E), isort (I)
select = ["E", "F", "I"]
ignore = ["F401", "E501"]  # Ignore unused imports everywhere



[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true



[tool.black]
max-line-length = 88 # Or your desired length
